Migrate main sources to Java 21 idioms